--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "@angular/platform-browser-dynamic": "7.0.4",
     "@angular/router": "7.0.4",
     "@ngx-translate/core": "11.0.1",
+    "@swimlane/dragula": "3.7.3",
+    "@swimlane/ngx-charts": "10.0.0",
+    "@swimlane/ngx-datatable": "14.0.0",
+    "@swimlane/ngx-dnd": "6.0.0",
+    "@types/dragula": "2.1.33",
+    "@types/prismjs": "1.9.0",
     "core-js": "2.5.7",
     "hammerjs": "2.0.8",
     "moment": "2.23.0",
