--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@swimlane/ngx-dnd": "6.0.0",
     "@types/dragula": "2.1.33",
     "@types/prismjs": "1.9.0",
+    "angular-in-memory-web-api": "0.8.0",
     "core-js": "2.5.7",
+    "date-fns": "1.29.0",
     "hammerjs": "2.0.8",
     "moment": "2.23.0",
     "ngx-cookie-service": "2.1.0",
